--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 *{
 	margin: 0px;
 	padding: 0px;
-	color: blue;
+	background-color: #0000ff;
 	font-family: arial;
 }
 
@@ -22,5 +22,5 @@ a:active{
 
 //TESTS
 h1{
-	color: green;
+	background-color: #00ff00;
 }
